# django-filepond-widget

./: .gitignore  Makefile  README.md  package.json  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: python-publish.yaml
src/django_filepond_widget/: apps.py  fields.py
src/django_filepond_widget/static/filepond_widget/css/: filepond.min.css
src/django_filepond_widget/static/filepond_widget/js/: filepond.min.js  js.cookie.min.js
src/django_filepond_widget/templates/django_filepond_widget/: widget.html
