[project]
name = "django-filepond-widget"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Jelle Besseling", email = "jelle@pingiun.com" }]
license = {text = "Unlicense"}
dependencies = [
    "django>=3",
    "django-drf-filepond>=0.4.0",
]
requires-python = ">=3"

[project.urls]
homepage = "https://github.com/pingiun/django-filepond-widget"
repository = "https://github.com/pingiun/django-filepond-widget"
documentation = "https://github.com/pingiun/django-filepond-widget"

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js"]
